<resources>
    <string name="app_name">M5Tracker</string>

    <string name="no_internet_msg">This feature requires internet connection. Please check your internet settings and try again.</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="submit">submit</string>

    <string name="dashboard">DashBoard</string>
    <string name="vehicles">Vehicles</string>
    <string name="settings">Settings</string>
    <string name="add_mark">Add Mark</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="no_str">NO</string>
    <string name="yes_str">YES</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure, you want to logout?</string>
    <string name="please_wait">Please wait</string>
    <string name="live_tracking_details">Live Tracking Details</string>
    <string name="select_vehicles">Select Vehicles</string>

    <string name="something_went_wrong">Something went wrong</string>
    <string name="select">Select</string>


    <string name="vehicle">Vehicle</string>
    <string name="speed">Speed</string>
    <string name="distance_travelled">Distance Travelled</string>
    <string name="running">Running</string>
    <string name="time">Time</string>
    <string name="ignition">Ignition</string>
    <string name="signal">Signal</string>
    <string name="immobilize">Immobilize</string>

    <!--Add Markers-->
    <string name="type_your_location">Type your Location</string>
    <string name="display_name">Display Name</string>

    <string name="user_details">User Details</string>
    <string name="update_password">Update Password</string>
    <string name="company_details">Company Details</string>
    <string name="company_address">Company Address</string>

    <!--Setting material icons-->
    <string name="icon_user_details">&#xE853;</string>
    <string name="icon_update_password">&#xE923;</string>
    <string name="icon_company_details">&#xE3C8;</string>
    <string name="icon_company_address">&#xE567;</string>
    <string name="save">save</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="retype_password">Retype password</string>
    <string name="vehicle_map_marker_img">Vehicle Map Marker Image</string>
    <string name="service_alert_distance">Service Alert Distance(KM)</string>
    <string name="overspeed_limit">Overspeed Limit</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="pin_code">Pin Code</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>

    <string name="the_following_is_the_list_of_vehicles">The Following is the list of vehicles</string>
    <string name="search">Search</string>

    <string name="reg_number">RegNumber</string>
    <string name="avg_mileage">Avg Mileage</string>
    <string name="tracker_tag">Tracker Tag</string>
    <string name="view_edit">View/Edit</string>

    <string name="avg_mileage_long">Avg Mileage(KM/L)</string>
    <string name="registration_number">Registration Number</string>
    <string name="last_service">Last Serviced Date</string>
    <string name="mark_as_serviced">Mark As Serviced</string>
</resources>
