<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_vehicles"
            android:icon="@drawable/ic_receipt_black_24dp"
            android:title="@string/vehicles" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_add_mark"
            android:icon="@drawable/ic_add_location_black_24dp"
            android:title="@string/add_mark" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="Logout" />

    </group>
</menu>