<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lly_user_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginEnd="@dimen/_10dp"
        android:layout_marginStart="@dimen/_10dp">

        <EditText
            android:id="@+id/et_display_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginTop="@dimen/_8dp"
            android:singleLine="true"
            android:maxLines="1"
            android:layout_marginBottom="@dimen/_8dp"
            android:padding="@dimen/_5dp"
            android:hint="@string/display_name" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_marginBottom="@dimen/_8dp"
            android:padding="@dimen/_5dp"
            android:singleLine="true"
            android:maxLines="1"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginTop="@dimen/_8dp"
            android:singleLine="true"
            android:maxLines="1"
            android:layout_marginBottom="@dimen/_8dp"
            android:padding="@dimen/_5dp"
            android:hint="@string/phone" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_90dp"
            android:background="@drawable/drawable_login_button"
            android:textColor="@color/white"
            android:layout_margin="@dimen/_8dp"
            android:paddingEnd="@dimen/_90dp"
            android:text="@string/save"/>
    </LinearLayout>
</LinearLayout>