<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginBottom="@dimen/_20dp"
        android:background="#fafafa"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_10dp"
            android:paddingTop="@dimen/_10dp">

            <LinearLayout
                android:id="@+id/lly_user_details"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|bottom"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_icon_user_details"
                    android:layout_width="@dimen/_120dp"
                    android:layout_height="@dimen/_120dp"
                    android:background="@drawable/white_circle_with_red_strok"
                    android:gravity="center"
                    android:text="@string/icon_user_details"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_50sp" />

                <TextView
                    android:id="@+id/tv_user_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:text="@string/user_details"
                    android:textColor="@color/dark_gray_color"
                    android:textSize="@dimen/_18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lly_update_password"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|bottom"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_icon_update_password"
                    android:layout_width="@dimen/_120dp"
                    android:layout_height="@dimen/_120dp"
                    android:background="@drawable/white_circle_with_red_strok"
                    android:gravity="center"
                    android:text="@string/icon_update_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_50sp" />

                <TextView
                    android:id="@+id/tv_update_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:text="@string/update_password"
                    android:textColor="@color/dark_gray_color"
                    android:textSize="@dimen/_18sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_10dp"
            android:paddingTop="@dimen/_10dp">

            <LinearLayout
                android:id="@+id/lly_company_details"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|bottom"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_icon_company_details"
                    android:layout_width="@dimen/_120dp"
                    android:layout_height="@dimen/_120dp"
                    android:background="@drawable/white_circle_with_red_strok"
                    android:gravity="center"
                    android:text="@string/icon_company_details"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_50sp" />

                <TextView
                    android:id="@+id/tv_company_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:text="@string/company_details"
                    android:textColor="@color/dark_gray_color"
                    android:textSize="@dimen/_18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lly_company_address"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|bottom"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_icon_company_address"
                    android:layout_width="@dimen/_120dp"
                    android:layout_height="@dimen/_120dp"
                    android:background="@drawable/white_circle_with_red_strok"
                    android:gravity="center"
                    android:text="@string/icon_company_address"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_50sp" />

                <TextView
                    android:id="@+id/tv_company_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:text="@string/company_address"
                    android:textColor="@color/dark_gray_color"
                    android:textSize="@dimen/_18sp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>