<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5dp">

        <TextView
            android:id="@+id/tv_display_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_name"
            android:gravity="center"
            android:textColor="@color/dark_slate_blue"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_display_name_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end|center"
            android:textColor="@color/black_color"
            android:textSize="@dimen/_18sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5dp">

        <TextView
            android:id="@+id/tv_reg_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
android:gravity="center"
            android:text="@string/reg_number"
            android:textColor="@color/dark_slate_blue"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_reg_number_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end|center"
            android:textColor="@color/black_color"
            android:textSize="@dimen/_18sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5dp">

        <TextView
            android:id="@+id/tv_avg_mileage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
android:gravity="center"
            android:text="@string/avg_mileage"
            android:textColor="@color/dark_slate_blue"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_avg_mileage_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end|center"
            android:textColor="@color/black_color"
            android:textSize="@dimen/_18sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5dp">

        <TextView
            android:id="@+id/tv_tracker_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
android:gravity="center"
            android:text="@string/tracker_tag"
            android:textColor="@color/dark_slate_blue"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_tracker_tag_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end|center"
            android:textColor="@color/black_color"
            android:textSize="@dimen/_18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/view_edit_value"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/button_teal_color"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/view_edit"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sp" />

</LinearLayout>