<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context="com.magni5.m5tracker.activities.LoginActivity">

    <ImageView
        android:layout_width="@dimen/_200dp"
        android:layout_height="@dimen/_200dp"
        android:layout_above="@+id/lly_login_edit_texts"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_50dp"
        android:background="@drawable/login_logo_icon" />

    <ImageView
        android:id="@+id/iv_bg_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:alpha=".3"
        android:background="@drawable/login_bg" />

    <LinearLayout
        android:id="@+id/lly_login_edit_texts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="@dimen/_25dp"
        android:layout_marginStart="@dimen/_25dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_user_name"
            style="@style/style_login_edit_text"
            android:layout_marginBottom="@dimen/_5dp"
            android:hint="@string/user_name"
            android:inputType="textNoSuggestions"
            android:text="rss.srinivas@magni5.net"
            android:textSize="@dimen/_14sp" />

        <EditText
            android:id="@+id/et_password"
            style="@style/style_login_edit_text"
            android:layout_marginTop="@dimen/_5dp"
            android:hint="@string/password"
            android:inputType="textPassword|textNoSuggestions"
            android:text="test123"
            android:textSize="@dimen/_14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lly_login_edit_texts"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_60dp"
        android:background="@drawable/drawable_login_button"
        android:paddingEnd="@dimen/_50dp"
        android:paddingStart="@dimen/_50dp"
        android:text="@string/submit"
        android:textColor="@android:color/white" />
</RelativeLayout>
